@@ -132,9 +132,9 @@ printdelay,          MULTI(print_delay)
 quit,                NEGBOOL(disable_quit)
 save,                NEGBOOL(disable_save)
 savedir,             MULTI(savedir)
-saveover,            MULTI(promptless_save)
-saveoverask,         MULTI(promptless_save)
-saveovernew,         MULTI(promptless_save)
+saveover,            POSBOOL(_promptless_save_over)
+saveoverask,         POSBOOL(_promptless_save_over_ask)
+saveovernew,         POSBOOL(_promptless_save_over_new)
 shortcuts,           NEGBOOL(noshortcuts)
 showcursor,          NEGBOOL(hide_cursor)
 simpleshapes,        POSBOOL(simple_shapes)
